test/errors/type/int/tostr.yasl
echo mt.lookup(0, .tostr)(1.0)
